# sensor-registry

./: .dockerignore  .env.example  .gitignore  README.md  conftest.py  manage.py  pyproject.toml  requirements.txt
apps/accounts/: apps.py  authentication.py  backends.py  device_urls.py  device_views.py  devices.py  forms.py  middleware.py  models.py  services.py  signals.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  (+1 more)
apps/audit/: apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/core/: apps.py  checks.py  context_processors.py  drf.py  forms.py  middleware.py  models.py  permissions.py  security.py  services.py  tenancy.py  urls.py  views.py
apps/exports/: apps.py  formats.py  services.py  urls.py  views.py
apps/installations/: api.py  api_urls.py  apps.py  forms.py  imaging.py  media_views.py  models.py  services.py  urls.py  views.py
apps/projects/: apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/pwa/: apps.py  urls.py  views.py
apps/sensors/: apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/testsupport/: apps.py  models.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py  test.py
deploy/: backup.sh  gunicorn.conf.py
deploy/docker/: Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  entrypoint.sh  nginx.conf
deploy/nginx/: papa.conf
deploy/systemd/: papa.service
docs/: DEPLOY.md  INSTALL.md  OFFLINE-TESTPROTOKOLL.md  PHASE-1.md  PHASE-2.md  PHASE-3.md  PHASE-4.md  PHASE-5.md  PHASE-6.md  PHASE-7.md  PHASE-8.md
static/css/: app.css
static/js/: capture.js  enhance.js  invite_copy.js  map.js
templates/: 403.html  404.html  500.html  base.html
templates/accounts/: login.html  user_form.html  user_list.html
templates/audit/: audit_list.html
templates/core/: dashboard.html  tenant_form.html  tenant_list.html
templates/devices/: device_list.html  invite_form.html  invite_show.html  register.html  register_invalid.html
templates/exports/: report.html
templates/includes/: _form_fields.html  _pagination.html  _search.html
templates/installations/: _status_badge.html  capture.html  installation_correct.html  installation_detail.html  installation_list.html  map.html  search.html
templates/projects/: _status_badge.html  project_detail.html  project_form.html  project_list.html
templates/pwa/: sw.js
templates/sensors/: sensor_form.html  sensor_import.html  sensor_list.html
(+35 files in other folders)
